@@ -1,9 +1,10 @@
 0.3.5.32
   - (zathor) [MP4 Muxer] fixed tmp directory handling. Bug #3129545
-  - (zathor) [Update] enhanced update detection part II. Some tools may need to be reapplied.
+  - (zathor) [Update] enhanced update detection part II. Some downloads may need to be reapplied.
   - (zathor) [Update] added the update date to the update window
   - (zathor) [Log] added preliminary log file writing. the well formed file will be written during closing.
   - (zathor) fixed main window height saving
+  - (zathor) [Update] added update log entries also to the main log
 
 0.3.5.31
   - (zathor) [ChapterCreator] removed error popup if more than one chapter is added within the preview window. Bug #3135824
